<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
<!--    android:padding="10dp">-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orders_order_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="Sign Up"
                android:textColor="#000"
                android:textSize="22sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Enter your details to continue." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Full Name" />

            <EditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Email Address" />

            <EditText
                android:id="@+id/et_email_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Bio (Person Desc.)" />

            <EditText
                android:id="@+id/et_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="User Name" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Age" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Occupation" />

            <EditText
                android:id="@+id/et_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="Mobile Number" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/gilroy_medium"
                android:inputType="phone" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/btn_round"
                android:backgroundTint="#1877F2"
                android:fontFamily="@font/bold_roboto"
                android:stateListAnimator="@null"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>