...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/civ_profile_pic"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:text="Krishna Dave"
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/black"
                            android:layout_gravity="center_vertical"
                            android:textColor="#000000"
...
